2006-04-17  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: set author properly for GEDCOM name
	on default source

2006-04-16  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/plugins/DescendReport.py: Don't sort children (Bug #1453010)

2006-04-15  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadXML.py: provide an event description if one does 
	not exist.

2006-04-15  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_9): Adapt to 
	ChildRefType.

2006-04-15  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs.py: handle child type callback
	* src/Editors/_EditFamily.py: handle child type callback

2006-04-14  Alex Roitman  <shura@gramps-project.org>
	* src/DisplayTabs.py (edit_button_clicked): Proceed only if
	selection exists.

2006-04-14  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadXML.py: handle ChildRefType
	* src/GrampsDb/_ConstXML.py: remove unused map

2006-04-14  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_PedigreeView.py: Fix ChildRef, Show person references
	* src/Editors/_EditFamily.py: Typo
	* src/GrampsDb/_GrampsDbBase.py (get_active_person): Handle case of no
	active person
	* src/plugins/TestcaseGenerator.py: really generate shared events; use
	new GrampsType; randomize name type
	* src/DataViews/_PersonView.py: DnD only for lines of persons; Fix set
	for python 2.3; fix get_parent_family_handle_list usage
	
2006-04-13  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_FamilyView.py: Type class support
	* src/DataViews/_PedigreeView.py: Type class support
	* src/GrampsDb/_ReadGedcom.py: Type class support
	* src/GrampsDb/_ReadXML.py: Type class support
	* src/GrampsDb/_DbUtils.py: Type class support
	* src/GrampsDb/_ConstXML.py: Type class support
	* src/GrampsDb/_WriteXML.py: Type class support
	* src/GrampsDb/_GrampsBSDDB.py: Type class support
	* src/RelLib/__init__.py: Type class support